# esp-ll-hal-rs

./: README.md
esp-ll/: Cargo.toml  build.rs
esp-ll/src/: lib.rs
esp32/: Cargo.toml  README.md
esp32/.cargo/: config.toml
esp32/src/: main.rs
esp32c3/: Cargo.toml  README.md
esp32c3/.cargo/: config
esp32c3/src/: lib.rs  main.rs
idf-ll-precompile/: compile.bat  compile.sh  idf.c
