[package]
name = "esp32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp32 = "0.11.0"
xtensa-lx6 = "0.2.0"
esp32-hal = "0.3.0"
esp-ll = { path = "../esp-ll", features = [ "esp32" ] }
ssd1306 = "0.7.0"
embedded-graphics = "0.7.1"
